gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-cfg-relocation-model.rs
#[cfg(relocation_model = "pic")] // { dg-error ".E0658." "" { target *-*-* } }
fn _foo() {}

fn main() {}

